增加发送消息接口
